# nix-templates

./: .gitignore  devshell.toml  flake.nix  pre-commit.sh  treefmt.toml
cells/_automation/: devshells.nix
cells/devshells/: devshells.nix
cells/main/: templates.nix
cells/nix-templates/: templates.nix
cells/nix-templates/haskell/: flake.nix
cells/nix-templates/nix/: flake.nix
cells/nix-templates/node/: .editorconfig  .gitignore  flake.nix  package-lock.json  package.json  tsconfig.json
cells/nix-templates/rack/: CMakeLists.txt  RackSDK.cmake
cells/nix-templates/rust/: .editorconfig
cells/repo/: configs.nix  devshells.nix
cells/templates/: templates.nix
cells/templates/haskell/: package.yaml
cells/templates/node/: flake.nix  package-lock.json  package.json  tsconfig.json
cells/templates/rack/: .gitignore
cells/templates/rust/: Cargo.toml
haskell/: .gitignore  default.nix  flake.nix  package.yaml
js-node/: node-packages.nix  package-lock.json  tsconfig.json
node/: .editorconfig  .gitignore  flake.nix  jest.config.js  package-lock.json  package.json  treefmt.toml  tsconfig.json  vite.config.ts
node/di-node/: node-packages.nix  package-lock.json  package.json  tsconfig.json
node/js-node/: package.json
node/src/: App.spec.ts  App.ts  bindings.ts
node/ts-node/: flake.nix  node-packages.nix  package.json
rack/: .editorconfig  flake.nix  plugin.json
rust/: .editorconfig  Cargo.toml  flake.nix  shell.nix  treefmt.toml
rust/src/: main.rs
ts-node/: flake.nix  package-lock.json  package.json  tsconfig.json
ts-node/src/: App.spec.ts
(+32 files in other folders)
