[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
## Testing
bacon = "2.2.0"

[dependencies]
## Neato errors
color-eyre = "0.6.0"

## Async runtime
# tokio = "1.21.0"

## DI container
# shaku = "0.6.0"

## Cli args
# clap = "3.2.0"
